k8s/overlays/local-min/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raushni-public
  namespace: raushni
  annotations:
    cert-manager.io/cluster-issuer: null
    nginx.ingress.kubernetes.io/server-snippet: null
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - raushni-dev.com
        - www.raushni-dev.com
        - api.raushni-dev.com
        - cms.raushni-dev.com
      secretName: raushni-dev-local-tls
  rules:
    - host: raushni-dev.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
          - path: /api/cms
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
          - path: /api/revalidate
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
          - path: /api/upload
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
          - path: /api/webhook
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: strapi
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
    - host: www.raushni-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
    - host: api.raushni-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http
    - host: cms.raushni-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strapi
                port:
                  name: http
